# matrix-determinant0

./: README.md
include/: .gitignore  CMakeLists.txt
include/.github/workflows/: ci.yml
include/matrix_determinant/: matrix_determinant.hpp
include/src/: matrix_determinant.cpp
include/tests/: test_matrix_determinant.cppp
